[package]
name = "macrotest"
version = "1.1.0"
authors = ["eupn <eupn@protonmail.com>"]
edition = "2021"
rust-version = "1.66"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/eupn/macrotest"
description = "Test harness for macro expansion"

[dependencies]
diff = "0.1"
fastrand = "2"
glob = "0.3"
prettyplease = "0.2"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0"
syn = { version = "2", features = ["full"] }
toml = "0.9"
