[workspace]
resolver = "2"
members = [
    "wrkspc",
    "wrkspc-dev",
    "wrkspc-macro",
    "wrkspc-test",
]

[workspace.package]
version = "0.0.0"
authors = ["eupn <eupn@protonmail.com>", "Mark Van de Vyver <mark@taqtiqa.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"
description = "A virtual workspace example for macrotest"
homepage = "https://github.com/eupn/macrotest"
repository = "https://github.com/eupn/macrotest"
documentation = "https://docs.rs/macrotest"
readme = "README.md"
publish = false

[workspace.dependencies]
wrkspc = { path = "wrkspc" }
wrkspc-dev = { path = "wrkspc-dev" }
wrkspc-macro = { path = "wrkspc-macro" }
wrkspc-test = { path = "wrkspc-test" }

macrotest = { path = "../" }

inventory = "0.3"
proc-macro2 = "1.0"
quote = "1"
syn = "2.0"
