[package]
name = "wrkspc-dev"
version = "0.0.0"
authors = ["Mark Van de Vyver <mark@taqtiqa.com>"]
license = "Apache-2.0"
edition = "2021"
description = "A development crate in a virtual workspace example"
homepage = "https://github.com/eupn/macrotest"
repository = "https://github.com/eupn/macrotest"
documentation = "https://docs.rs/macrotest"
readme = "README.md"
publish = false

[dependencies]
wrkspc-macro = { path = "../wrkspc-macro" }
