[package]
name = "wrkspc-test"
version = "0.0.0"
edition = "2021"
publish = false

[lib]

[features]
default = []

test-feature = []

[dev-dependencies]
macrotest = { path = "../../../macrotest" }
inventory = "0.2.2"

[[test]]
name = "integration-tests"
path = "integration/main.rs"
harness = false

[[test]]
name = "defaults-indev-tokio"
path = "integration/feature.rs"
harness = false
required-features = ["test-feature"]
