[package]
name = "wrkspc-test"

publish = false

[lib]
path = "src/lib.rs"

# [[bin]]
# name = "wrkspc-test"
# path = "src/main.rs"

[features]
default = []
test-feature = []

[dependencies]
wrkspc-dev.workspace = true
wrkspc-macro.workspace = true

macrotest.workspace = true
inventory.workspace = true

[dev-dependencies]
wrkspc-dev.workspace = true
wrkspc-macro.workspace = true
macrotest.workspace = true
inventory.workspace = true

# [[test]]
# name = "integration-tests"
# path = "src/main.rs"
# harness = false

# [[test]]
# name = "feature-test"
# path = "src/tests/feature.rs"
# harness = false
