[package]
name = "wrkspc"
version = "0.0.0"
authors = ["Mark Van de Vyver <mark@taqtiqa.com>"]
license = "Apache-2.0"
edition = "2018"
description = "A crate in a virtual workspace example"
homepage = "https://github.com/eupn/macrotest"
repository = "https://github.com/eupn/macrotest"
documentation = "https://docs.rs/macrotest"
readme = "README.md"
publish = false

[dependencies]
wrkspc-macro = { path = "../wrkspc-macro" }

[dev-dependencies]
wrkspc-dev = { path = "../wrkspc-dev" }
