[package]
name = "wrkspc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
publish = false


[dependencies]
wrkspc-dev = { path = "wrkspc-dev" }
wrkspc-macro = { path = "wrkspc-macro" }
wrkspc-test = { path = "wrkspc-test" }

macrotest = { path = "../" }

inventory = "0.3"
proc-macro2 = "1.0"
quote = "1"
syn = "2.0"
